--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             var script = document.createElement("script");
             script.async = true;
             script.type = "text/javascript";
-            script.src = "https://www.replystyle.com/widgetscript.js";
+            script.src = "https://www.replystyle.com/widget.js";
             document.getElementsByTagName('HEAD').item(0).appendChild(script);
         })();</script>
 
