--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             var script = document.createElement("script");
             script.async = true;
             script.type = "text/javascript";
-            script.src = "https://www.replystyle.com/widget.js";
+            script.src = "http://www.replystyle.com/widget.js";
             document.getElementsByTagName('HEAD').item(0).appendChild(script);
             script.onreadystatechange = script.onload = function (e) {
                 if (!this.readyState || this.readyState == "loaded" || this.readyState == "complete") {
