We'll let it init on its own

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
             script.type = "text/javascript";
             script.src = "http://www.replystyle.com/widget.js";
             document.getElementsByTagName('HEAD').item(0).appendChild(script);
-            script.onreadystatechange = script.onload = function (e) {
-                if (!this.readyState || this.readyState == "loaded" || this.readyState == "complete") {
-                    ReplyStyle.init();
-                }
-            };
+//            script.onreadystatechange = script.onload = function (e) {
+//                if (!this.readyState || this.readyState == "loaded" || this.readyState == "complete") {
+//                    ReplyStyle.init();
+//                }
+//            };
         })();</script>
     </body>
 
