--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
     <head>
-        <title>Cycloserve</title>
+        <title>Moxie</title>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <h1>Welcome to Cycloserve!</h1>
+        <h1>Welcome to Moxie!</h1>
 
         <!-- replystyle widget loader -->
-        <script type="text/javascript">(function () {
-            var script = document.createElement("script");
-            script.async = true;
-            script.type = "text/javascript";
-            script.src = "http://www.replystyle.com/widget.js";
-            document.getElementsByTagName('HEAD').item(0).appendChild(script);
-//            script.onreadystatechange = script.onload = function (e) {
-//                if (!this.readyState || this.readyState == "loaded" || this.readyState == "complete") {
-//                    ReplyStyle.init();
-//                }
-//            };
-        })();</script>
+        <script type="text/javascript" src="//localhost:3000/replystyle.js"></script>
+        <style type="text/css" media="screen, projection">
+            @import url(//localhost:3000/replystyle.css);
+        </style>
+        <script type="text/javascript">
+//          function () {
+//            var script = document.createElement("script");
+//            script.async = true;
+//            script.type = "text/javascript";
+//            script.src = "http://localhost:3000/widget.js";
+//            document.getElementsByTagName('HEAD').item(0).appendChild(script);
+//          }) ();
+          if (typeof(ReplyStyle) !== "undefined") {
+            ReplyStyle.init({
+              tenant: 2
+            });
+          }
+        </script>
     </body>
 
 </html>
