Serve assets through the pipeline

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
         <h1>Welcome to Moxie!</h1>
 
         <!-- replystyle widget loader -->
-        <script type="text/javascript" src="//localhost:3000/replystyle.js"></script>
+        <script type="text/javascript" src="//localhost:3000/assets/replystyle.js"></script>
         <style type="text/css" media="screen, projection">
-            @import url(//localhost:3000/replystyle.css);
+            @import url(//localhost:3000/assets/replystyle.css);
         </style>
         <script type="text/javascript">
 //          function () {
